--- a/public/index.html
+++ b/public/index.html
@@ -24,28 +24,16 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-  <!-- Quantcast Tag -->
-<script type="text/javascript">
-var _qevents = _qevents || [];
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZYLH763ZQC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-(function() {
-var elem = document.createElement('script');
-elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
-elem.async = true;
-elem.type = "text/javascript";
-var scpt = document.getElementsByTagName('script')[0];
-scpt.parentNode.insertBefore(elem, scpt);
-})();
+    gtag('config', 'G-ZYLH763ZQC');
+  </script>
+    <meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><!--[if IE]><link rel="icon" href="favicon.ico"><![endif]--><link rel=apple-touch-icon sizes=76x76 href=/img/icons/apple-touch-icon.png><link rel=icon type=image/png sizes=32x32 href=/img/icons/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/img/icons/favicon-16x16.png><link rel=manifest href=manifest.json><meta name=msapplication-TileColor content=#FFC515><link rel=stylesheet href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons"><title>Booty Boi</title><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css><link href=css/app.1f438af8.css rel=preload as=style><link href=css/chunk-vendors.08cdc53b.css rel=preload as=style><link href=js/app.d5cb96c7.js rel=preload as=script><link href=js/chunk-vendors.15a8945c.js rel=preload as=script><link href=css/chunk-vendors.08cdc53b.css rel=stylesheet><link href=css/app.1f438af8.css rel=stylesheet><link rel=icon type=image/png sizes=32x32 href=img/icons/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=img/icons/favicon-16x16.png><link rel=manifest href=manifest.json><meta name=theme-color content=#4DBA87><meta name=apple-mobile-web-app-capable content=no><meta name=apple-mobile-web-app-status-bar-style content=default><meta name=apple-mobile-web-app-title content="Booty Boi"><link rel=apple-touch-icon href=img/icons/apple-touch-icon-152x152.png><link rel=mask-icon href=img/icons/safari-pinned-tab.svg color=#4DBA87><meta name=msapplication-TileImage content=img/icons/msapplication-icon-144x144.png><meta name=msapplication-TileColor content=#000000></head><body><noscript><strong>We're sorry but looty-boi-client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=js/chunk-vendors.15a8945c.js></script><script src=js/app.d5cb96c7.js></script></body>
+  </html>
 
-_qevents.push({
-qacct:"p-xLjaRf4kyfneZ"
-});
-</script>
-
-<noscript>
-<div style="display:none;">
-<img src="//pixel.quantserve.com/pixel/p-xLjaRf4kyfneZ.gif" border="0" height="1" width="1" alt="Quantcast"/>
-</div>
-</noscript>
 <!-- End Quantcast tag -->
 </html>
