--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <script async src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=0fb57ed7-b23e-4c78-9e76-77ebd6811ae7"></script>
-   
+    <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=116515&format=468x60&ga=g"></script>
   </head>
   <body>
     <noscript>
