--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
-    
+    <script>window.msAdsQueue = window.msAdsQueue || [];</script>
+  <script async src="https://adsdk.microsoft.com/mmnow/sdk.js?siteId=365236&publisherId=254116640" crossorigin="anonymous"></script>
 
   </head>
   <body>
